--- a/_posts/2016-07-11-toyota.markdown
+++ b/_posts/2016-07-11-toyota.markdown
@@ -1,11 +1,10 @@
 ---
 layout: post
-title: "Тойота-Маша-Недоверяша"
+title: "Букинист #002. Тойота-Маша-Недоверяша"
 date: "2016-07-11 19:16:04 +0800"
-tags: library
+tags: library fiction
+eye_catch: /images/bookinist/002.jpg
 ---
-
-![toyota]({{ site.url }}/images/toyota.jpg)
 
 > Все как могли убивали время, и только Михалыч его жалел и непробиваемо лежал на диване.
 
@@ -54,6 +53,4 @@ tags: library
 ### Резюме
 
 Поначалу тяжело читается. Приходится действительно напрягать воображение, чтобы понять, о чем беседуют герои. Так же книга наполнена любовью к сибирской природе (и просто любовью), много страниц с описанием красоты полей, Енисея, Саянских гор... Лично мне такое трудно даётся. Только ближе к середине меня захватило. И не отпускало до конца. Отдельный шедевр - 15 глава, улыбка у меня потом долго не сходила. Рекомендую прочитать повесть хотя бы ради неё.
-
-![toyota]({{ site.url }}/images/toyota2.jpg)
 
