--- a/_posts/2016-07-11-slaves.markdown
+++ b/_posts/2016-07-11-slaves.markdown
@@ -1,11 +1,10 @@
 ---
 layout: post
-title: "Quot servi tot hostes"
+title: "Букинист #001. Quot servi tot hostes"
 date: "2016-07-11 00:27:03 +0800"
-tags: library
+tags: library nonfiction
+eye_catch: /images/bookinist/001.jpg
 ---
-
-![Как управлять рабами?](http://divideby.ml/images/09fc65eda6593cda5f7213d9dd372fd1ebe8a688.jpeg)
 
 Не так давно я снова увлёкся чтением книг. До этого был чуть ли не пятилетний перерыв, когда я не читал ничего, кроме учебников. Но внезапно cлучилась пара человек, которые каким-то образом непроизвольно способстовали обратно вернуться к чтению.
 
