--- a/_posts/2016-10-20-dekabrist000.markdown
+++ b/_posts/2016-10-20-dekabrist000.markdown
@@ -30,7 +30,7 @@ eye_catch: /images/december/000.jpg
 
 > Зеленых зон станет в два раза больше. Загрязненность воздуха снизится в 2,5 раза, а уровень шума упадет на 50%.
 
-**[Статья интересна в первую очередь тем](https://daily.afisha.ru/cities/2302-kak-v-barselone-delayut-samuyu-radikalnuyu-urbanisticheskuyu-revolyuciyu-v-mire/)**, что люди наконец стали изменять инфраструктуру города, чтобы жить в нем было комфортно. А то города обычно складываются исторически и некомфортно для житья.
+**[Статья интересна в первую очередь тем](https://daily.afisha.ru/cities/2302-kak-v-barselone-delayut-samuyu-radikalnuyu-urbanisticheskuyu-revolyuciyu-v-mire/)**, что люди наконец стали изменять инфраструктуру города, чтобы жить в нем было уютно. А то города обычно складываются исторически и некомфортно для житья.
 
 ### Ссылочки
 
