--- a/_posts/2016-10-20-dekabrist000.markdown
+++ b/_posts/2016-10-20-dekabrist000.markdown
@@ -6,7 +6,7 @@ tags: links
 eye_catch: /images/december/000.jpg
 ---
 
-В рубрике **Декабрист** я буду выкладывать интересное из сети, на что натыкаюсь за неделю. Ссылки на статьи, видео, сайты-залипалки. Короче то, под что прокастинирую с некоторой пользой. Выходит по пятницам-развратницам, так что не стесняйтесь, в пятницу можно.
+В рубрике **Декабрист** я буду выкладывать интересное из сети, на что натыкаюсь за неделю. Ссылки на статьи, видео, сайты-залипалки. Короче то, под что прокрастинирую с некоторой пользой. Выходит по пятницам-развратницам, так что не стесняйтесь, в пятницу можно.
 
 Сегодня в выпуске у нас ука-ука-укачака, иконки, криповые истории и урбанистическая революция в Барселоне. Погнали.
 
