--- a/_posts/2016-10-20-dekabrist000.markdown
+++ b/_posts/2016-10-20-dekabrist000.markdown
@@ -38,7 +38,7 @@ eye_catch: /images/december/000.jpg
 
 ### Супергерои. Опять?
 
-На фоне прошумевшего трейлера ["Логана"](https://www.youtube.com/watch?v=Div0iP65aZo), как-то все не заметили, что в сети появился первый трейлер продолжения Стражей Галактики. Нетипичный боевик Marvel, на который можно сходить даже тем, кто далек от мира супергероев из комиксов.
+На фоне прошумевшего трейлера **[Логана](https://www.youtube.com/watch?v=Div0iP65aZo)**, как-то все не заметили, что в сети появился первый трейлер продолжения Стражей Галактики. Нетипичный боевик Marvel, на который можно сходить даже тем, кто далек от мира супергероев из комиксов.
 
 <iframe width="840" height="473" src="https://www.youtube.com/embed/2mFcxL51X_k" frameborder="0" allowfullscreen></iframe>
 
