--- a/_posts/2016-10-28-dekabrist001.markdown
+++ b/_posts/2016-10-28-dekabrist001.markdown
@@ -27,6 +27,6 @@ eye_catch: /images/december/001.jpg
 ### ГЕНЕРИРУЕМ ЛИДЫ
 Забавный скетч на тему современной проектной работы, куча непонятных слов и вполне понятная чисто концовочка.
 
-<iframe width="840" height="473" src="https://www.youtube.com/watch?v=ir5rj2yYH_8" frameborder="0" allowfullscreen></iframe>
+<iframe width="840" height="473" src="https://www.youtube.com/embed/ir5rj2yYH_8" frameborder="0" allowfullscreen></iframe>
 
 Всем хороших выходных!
