--- a/_posts/2016-10-28-dekabrist001.markdown
+++ b/_posts/2016-10-28-dekabrist001.markdown
@@ -22,10 +22,10 @@ eye_catch: /images/december/001.jpg
 **[Крутой текст про память.](https://daily.afisha.ru/brain/3358-mariya-falikman/)** Проясняет вопросы почему мы испытываем дежавю и жамевю и как часто память нам врёт. Рассматривают и тему "ошибки источника". Это когда ты придумываешь что-то очень крутое, но на деле ты это случайно подсмотрел, не зафиксировал источник и через какое-то время с полной уверенностью выдаешь это за своё.
 
 ### Очень грустные игры
-**[На этом сайте](http://www.necessarygames.com/my-games/loneliness/flash)** можно найти 3 очень грустные игры. Создатель вдохновляется реальными событиями или современными проблемами. А не знаю как это описать, просто поиграйте.
+**[На этом сайте](http://www.necessarygames.com/my-games/loneliness/flash)** можно найти 3 очень грустные игры. Создатель вдохновляется реальными событиями или современными проблемами. Я не знаю как это описать, просто поиграйте.
 
 ### ГЕНЕРИРУЕМ ЛИДЫ
-Забавный скетч на тему современной проектной работы, куча непонятных слов и вполне понятная чисто концовочка.
+Забавный скетч на тему современной проектной работы, куча непонятных слов и вполне понятная чисто русская концовочка.
 
 <iframe width="840" height="473" src="https://www.youtube.com/embed/ir5rj2yYH_8" frameborder="0" allowfullscreen></iframe>
 
