--- a/_posts/2016-11-04-dekabrist002.markdown
+++ b/_posts/2016-11-04-dekabrist002.markdown
@@ -24,7 +24,7 @@ eye_catch: /images/december/002.jpg
 
 У сериала Мистер Робот потрясный фан-сервис. На сайте usanetwork сериаломаны найдут кучу любопытного. Но я вам подкину залипательную **[версию 2048](http://www.usanetwork.com/mrrobot/2048)** в стилистике сериала.
 
-### Жесткий родители, жестокие дети
+### Жесткие родители, жестокие дети
 
 Просто потрясающе чудовищно смешное видео о том, как родители разыгрывают своих детей после Хэллоуина. Этот традиционный розыгрыш на шоу Джимми Киммела проходит с 2010 года. Очень смешно и очень жестоко.
 
