--- a/_posts/2016-11-18-dekabrist003.markdown
+++ b/_posts/2016-11-18-dekabrist003.markdown
@@ -9,6 +9,7 @@ eye_catch: /images/december/003.jpg
 В рубрике **Декабрист** я буду выкладывать интересное из сети, на что натыкаюсь за неделю. Ссылки на статьи, видео, сайты-залипалки. Короче то, под что прокрастинирую с некоторой пользой. Выходит по пятницам-развратницам, так что не стесняйтесь, в пятницу можно.
 
 Прошлую неделю я бессовестно пропустил. В этот раз такого не допущу. Сегодня много об играх.
+<!--more-->
 
 ### Бог твиттера
 
